# cpp-websocket

./: .gitignore  CMakeLists.txt  README.md
AI_log/: log.md
discovery_server/: CMakeLists.txt  external_server.cpp
frontend/: app.js  cmd.html  cmd_style.css  index.html  remote.html  script.js  style.css
include/: announce.h  base64.h  camera.h  encode.h  file_explorer.h  global.h  keylogger.h  lib.h  list_app.h  list_proc.h  screen.h  screenshot.h  terminal.h
server_agent/: CMakeLists.txt
server_agent/include/: announce.h  camera.h  control.h  file_explorer.h  global.h  systeminfo.h
server_agent/src/utils/: announce.cpp  camera.cpp  global.cpp  list_proc.cpp
src/: main.cpp
src/utils/: announce.cpp  base64.cpp  camera.cpp  control.cpp  global.cpp  keylogger.cpp  lib.cpp  list_app.cpp  list_proc.cpp  screen.cpp  screenshot.cpp  terminal.cpp
